Fix root color (visible when rubber-band-scrolling)

--- a/src/index.css
+++ b/src/index.css
@@ -178,7 +178,7 @@ button:focus-visible {
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
-    background-color: #ffffff;
+    background-color: #f5f5f5;
   }
   a:hover {
     color: #747bff;
